testsuite/poke.pkl/cast-diag-3.pk
/* { dg-do compile } */

var v = 10 as any; /* { dg-error "" } */
